--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,8 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="css/angular-chart.css">
+    
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -21,6 +22,8 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/Chart.js"></script>
+    <script src="js/angular-chart.min.js"></script>
   </head>
 
   <body ng-app="starter">
